16952
{code}
scala> def foo[T: ClassTag] = println(classOf[T])
<console>:7: error: class type required but T found
       def foo[T: ClassTag] = println(classOf[T])
                                              ^
{code}
